<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".login.PwsEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_pws_white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/reset_phone"
            style="@style/pws_edit_input"
            android:hint="@string/hint_phone2"
            android:inputType="phone"
            android:maxLength="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/reset_code"
                style="@style/pws_edit_input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/hint_code_set2"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/reset_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:text="获取验证码"
                android:textColor="@drawable/tab_text_color"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/reset_pws"
            style="@style/pws_edit_input"
            android:hint="@string/hint_pws1"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/reset_pwsAgin"
            style="@style/pws_edit_input"
            android:hint="@string/hint_pws2"
            android:inputType="textPassword" />

    </LinearLayout>

    <com.example.shanyu.widget.CirButton
        android:id="@+id/reset_commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:text="确定"
        android:textSize="14sp" />

</LinearLayout>